# Bellatrex

./: .coverage  .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.runtime  README.md  ROADMAP.md  coverage.xml  manual_test_nicegui.py  model_example.pkl  nbstripout.json  pylintrc  pyproject.toml  pytest.ini  setup.py  setup.py.gitignore.py  sitemap.xml  test_matplotlib_interactive.py  tutorial.ipynb  tutorial.py
.github/workflows/: ci-matrix.yaml  ci-matrix.yml  coverage-parity.yml  coverage.yaml  coverage.yml  pre-release.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  quick-ci.yaml  release.yaml  test-windows.yml
app/: Release_notes.md  Todo.md
app/bellatrex/: LocalMethod_class.py  TreeDissimilarity_class.py  TreeExtraction_class.py  TreeRepresentation_utils.py  __init__.py  __version__.py  bellatrex_explain.py  gui_plots_code.py  gui_plots_nicegui.py  gui_utils.py  init.pyi  nicegui_plots_code.py  plot_tree_patch.py  rule_length_script.py  tree_dissimilarity.py  tree_extraction.py  tree_representation_utils.py  utilities.py  visualisation.py  visualization.py  visualization_extra.py  wrapper_class.py
app/bellatrex/_nicegui/: __init__.py  cache.py  models.py  rendering.py  runtime.py  windows.py
app/bellatrex/datasets/: __init__.py  binary_pretrained.pkl  multi-label_pretrained.pkl  multi-target_pretrained.pkl  regression_pretrained.pkl
docker/: btrex-ci
scripts/: codecov-local.ps1
tests/: conftest.py  test_bellatrex_explain.py  test_dataset_loaders.py  test_gui_nicegui.py  test_inputs.py  test_main_run.py  test_nicegui_helpers.py  test_nicegui_runtime.py  test_plot_tree_patch.py  test_py_run.py  test_tree_dissimilarity.py  test_tree_representation_utils.py  test_utilities.py  test_visualization.py  test_wrapper_class.py
