[project]
name = "bellatrex"
dynamic = ["version"]
description = "Explaining Random Forest model predictions by Building Explanations through a LocaLly AccuraTe Rule EXtractor"
readme = "README.md"
authors = [
    { name = "Klest Dedja", email = "daneel.olivaw94@gmail.com" },
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.9, <4.0"
keywords = ["explainable AI", "rule extraction", "random forest", "surrogate models"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "scikit-learn >=1.2",
    "threadpoolctl >=3.1",
    "scikit-survival >=0.22",
    "scipy >=1.11",
    "pandas >=1.5",
    "bottleneck", # needed for pandas performance
    "matplotlib >=3.7",
    "joblib >=1.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "twine",
    "black >= 0.24",
    "nbstripout >= 0.6",
    "vulture >= 2.7"
]
gui = [
    "nicegui >=2.0.0",
    "plotly >=5.0",
    "pywebview"
]

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = false
exclude = '''
/(
    \.venv
  | build
  | dist
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
)/
'''

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.dynamic]
version = { attr = "bellatrex.__version__" }

[tool.setuptools.package-data]
"bellatrex.datasets" = ["*.csv"]

 # Docker related settings, one of the goals is to obtain consistent coverage reports
[tool.coverage.run]
source = ["app/bellatrex"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
skip_covered = true




[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"


