[project]
name = "bellatrex"
dynamic = ["version"]
description = "Explaining Random Forest model predictions by Building Explanations through a LocaLly AccuraTe Rule EXtractor"
readme = "README.md"
authors = [
    { name = "Klest Dedja", email = "klest.dev@gmail.com" },
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10, <4.0"
keywords = ["explainable AI", "rule extraction", "random forest", "surrogate models"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy >=1.21",
    "pandas >=1.5",
    "bottleneck", # needed for pandas performance (not a requirement! move out from here)
    "scipy >=1.11",
    "matplotlib >=3.7",
    "scikit-learn >=1.2",
    "scikit-survival >=0.22",
    "threadpoolctl >=3.1",
    "joblib >=1.3",
]

# here optional dependecies for testing and development, include black
[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "twine",
    "black >= 24",
    "nbstripout >= 0.6",
    "vulture >= 2.7",
]

# TODO: move this to normal dependencies (0.4.1), drop separation
# consider adding a [performance] one or similar
gui = [
    "nicegui",
    "pywebview",
    "plotly",
]

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = false
exclude = '''
/(
    \.venv
  | build
  | dist
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
    | tmp[^/]*
)/
'''

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.dynamic]
version = { attr = "bellatrex.__version__" }

[tool.setuptools.package-data]
"bellatrex.datasets" = ["*.csv"]

[tool.coverage.run]
source = ["app/bellatrex"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
skip_covered = true


[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"


