[project]
name = "bellatrex"
dynamic = ["version"]
description = "Explaining Random Forest model predictions by Building Explanations through a LocaLly AccuraTe Rule EXtractor"
readme = "README.md"
authors = [
    { name = "Klest Dedja", email = "klest.dev@gmail.com" },
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10, <4.0"
keywords = ["explainable AI", "rule extraction", "random forest", "surrogate models"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy >=1.21",
    "pandas >=1.5",
    "scipy >=1.11",
    "matplotlib >=3.7",
    "scikit-learn >=1.2",
    "scikit-survival >=0.22",
    "threadpoolctl >=3.1",
    "joblib >=1.3",
    "nicegui>=3.0",
    "pywebview>=5.1",
    "plotly>=6.0",
]

# here optional dependecies for testing and development, include black
[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "twine",
    "black >= 24",
    "nbstripout >= 0.6",
    "vulture >= 2.7",
]

# TODO: move this to normal dependencies (0.4.1), drop separation
# consider adding a [performance] one or similar
# with "bottleneck", # needed for pandas performance (not a requirement! move out from here)
# and numpyexpr or smth

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = false
exclude = '''
/(
    \.venv
  | build
  | dist
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
    | tmp[^/]*
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
# E/W: pycodestyle, F: pyflakes, I: isort
select = ["E", "F", "W", "I"]
# E501 (line-too-long) is handled by black; E741 (ambiguous var names) too noisy for now
ignore = ["E501", "E741"]
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.mypy]
# Permissive baseline — tighten gradually as type hints are added
ignore_missing_imports = true
allow_untyped_defs = true
allow_untyped_calls = true
warn_unused_ignores = true
pretty = true

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.dynamic]
version = { attr = "bellatrex.__version__" }

[tool.setuptools.package-data]
"bellatrex.datasets" = ["*.csv"]

[tool.coverage.run]
source = ["app/bellatrex"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
skip_covered = true


[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"
